--- a/templates/taxi.html
+++ b/templates/taxi.html
@@ -75,7 +75,7 @@
         }
 
         #chat-icon button {
-            background: #FFD24C;
+            background: #FFFFF;
             border-radius: 50%;
             padding: 20px;
             font-size: 1.5em;
@@ -99,7 +99,7 @@
             }
         }
     </style>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&v=weekly" async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQldjdCRIWhdXc_gz81TPr1xGyK6K5z1w&callback=initMap&v=weekly" async defer></script>
 </head>
 <body>
 
